Add missing sql database upgrade for kmmpayees table

With this commit the kmymoney database version has been updated to 13.

BUG:501591
FIXED-IN:5.1.94